--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>myApp</artifactId>
+	<artifactId>prototype</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>myApp</name>
+	<name>prototype</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
