--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,17 @@
 					<target>11</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>com.heroku.sdk</groupId>
+				<artifactId>heroku-maven-plugin</artifactId>
+				<version>3.0.3</version>
+				<configuration>
+					<processTypes>
+						<web>java $JAVA_OPTS -cp target/classes:target/dependency/app</web>
+					</processTypes>
+					<appName>app</appName>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
