--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,7 @@
 spring:
+  jpa:
+    database: System.env("DATABASE")
+  datasource:
+    url: System.env("DATABASE_URL")
+    username: System.env("DB_USER")
+    password: System.env("PASSWWORD")
