fix:postgre設定の誤字等修正

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 spring:
   jpa:
-    database: System.env("DATABASE")
+    database: POSTGRESQL
   datasource:
-    url: System.env("DATABASE_URL")
-    username: System.env("DB_USER")
-    password: System.env("PASSWWORD")
+    platform: postgres
+    url: ${DATABASE_URL}
+    username: ${DB_USER}
+    password: ${PASSWORD}
